--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             </div>
             <div class="project">
                 <h3>Projeto 2</h3>
-                <p>Descrição do projeto 2.</p>
+                <p>Em breve...</p>
             </div>
             <div class="project">
                 <h3>Projeto 3</h3>
-                <p>Descrição do projeto 3.</p>
+                <p>Em breve...</p>
             </div>
             <!-- Adicione mais projetos conforme necessário -->
         </div>
