--- a/index.html
+++ b/index.html
@@ -68,5 +68,15 @@ href="https://github.com/LucasRuanDev" target="_blank">Meu Perfil</a></p>
             <p>&copy; 2024 Lucas Ruan. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+<!-- Outros códigos ou links de estilo -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=328010226"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '328010226');
+  </script>
+
 </body>
 </html>
