Atualização do index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Portfólio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -21,6 +21,7 @@
         </div>
     </header>
 
+    <!-- Seção Herói -->
     <section id="hero">
         <div class="container">
             <h2>Bem-vindo ao meu portfólio</h2>
@@ -29,38 +30,50 @@
         </div>
     </section>
 
+    <!-- Sobre Mim -->
     <section id="about" class="container">
         <h2>Sobre Mim</h2>
-        <p>Sou um estudante de Ciência da Computação apaixonado por tecnologia e desenvolvimento de sistemas. Estou constantemente aprendendo novas habilidades e buscando maneiras de aplicar meu conhecimento em projetos inovadores.</p>
+        <p>Olá! Sou Lucas Ruan, um entusiasta da Ciência da Computação e Desenvolvimento de Sistemas. Minha paixão por tecnologia começou quando eu era jovem, e desde então, tenho me dedicado a aprimorar minhas habilidades e aprender sobre as últimas tendências do setor.</p>
+
+        <h3>Minha Jornada</h3>
+        <p>Estou me formando em Ciência da Computação pela Unifbv Wyden e, desde então, tenho trabalhado em diversos projetos, desde desenvolvimento web a criação de softwares. Minha experiência inclui estudar e utilizar HTML, CSS, JavaScript e Python, o que me permitiu construir soluções criativas e eficientes.</p>
+
+        <h3>O que eu faço</h3>
+        <p>Atualmente, estou focado em desenvolvimento front-end e design, mas sou mais apegado ao back-end.</p>
+
+        <h3>Meu objetivo</h3>
+        <p>Meu objetivo é continuar a expandir meus conhecimentos e aplicar minhas habilidades em projetos desafiadores. Estou sempre aberto a colaborar e aprender com outros profissionais da área. Além disso, adoro resolver problemas usando a programação, que me ajuda a me manter equilibrado e inspirado.</p>
+
+        <h3>Vamos nos conectar!</h3>
+        <p>Se você estiver interessado em discutir colaborações, projetos ou apenas quiser conversar sobre tecnologia, não hesite em entrar em contato. Estou ansioso para conectar-me com outros apaixonados por tecnologia!</p>
     </section>
 
+    <!-- Projetos -->
     <section id="projects" class="container">
         <h2>Projetos</h2>
         <div class="project-grid">
             <div class="project">
                 <h3>Portfólio</h3>
-                <p>Criação deste site para fazer um portfólio online, usando Html e Css.</p>
+                <p>Criação deste site para fazer um portfólio online, usando HTML, CSS e JS.</p>
             </div>
             <div class="project">
-                <h3>Projeto 2</h3>
-                <p>Em breve...</p>
+                <h3>CRUD</h3>
+                <p>Criação de um CRUD como projeto da faculdade.</p>
             </div>
             <div class="project">
-                <h3>Projeto 3</h3>
-                <p>Em breve...</p>
+                <h3>Bot Discord</h3>
+                <p>Criação de um bot no Discord usando Python.</p>
             </div>
-            <!-- Adicione mais projetos conforme necessário -->
         </div>
     </section>
 
+    <!-- Contato -->
     <section id="contact" class="container">
         <h2>Contato</h2>
         <p>Estou disponível para novas oportunidades e colaborações. Sinta-se à vontade para entrar em contato comigo!</p>
-        <p>Email: <a
-href="mailto:lruan1704@gmail.com">Enviar e-mail</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/lucas-ruan-021b2a2aa?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Meu Perfil</a></p>
-         <p>GitHub <a
-href="https://github.com/LucasRuanDev" target="_blank">Meu Perfil</a></p>
+        <p>Email: <a href="mailto:lruan1704@gmail.com">Enviar E-mail</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/lucas-ruan-021b2a2aa" target="_blank">Meu Perfil</a></p>
+        <p>GitHub: <a href="https://github.com/LucasRuanDev" target="_blank">Meu Perfil</a></p>
     </section>
 
     <footer>
@@ -69,5 +82,6 @@ href="https://github.com/LucasRuanDev" target="_blank">Meu Perfil</a></p>
         </div>
     </footer>
 
+    <script src="script.js"></script> <!-- Referência ao arquivo JS -->
 </body>
 </html>
